--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                     </div>
                 </div>
                 <div class="modal-field">
-                    <label class="input-text" for="user-comment">Comment</label>
+                    <label class="input-text" for="comment-text">Comment</label>
                     <div class="input-wrap">
                         <textarea class="comment-input" name="comment-text" id="comment-text"
                             placeholder="Text input"></textarea>
