--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                 <div class="modal-field">
                     <label class="input-text" for="user-phone">Phone</label>
                     <div class="input-wrap">
-                        <input class="modal-input" id="user-phone" name="user-phone" type="phone" required />
+                        <input class="modal-input" id="user-phone" name="user-phone" type="telephone" required />
                         <svg class="modal-icon" width="24" height="24">
                             <use href="./images/symbol-defs.svg#icon-phone"></use>
                         </svg>
