bug some mistakes

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                         </svg>
                     </div>
                 </div>
-                <div class="modal-field">
+                <div class="modal-field-last">
                     <label class="input-text" for="comment-text">Comment</label>
                     <div class="input-wrap">
                         <textarea class="comment-input" name="comment-text" id="comment-text"
